--- a/likita_proj/base/templates/base/hero.html
+++ b/likita_proj/base/templates/base/hero.html
@@ -12,6 +12,10 @@
           <span class="wrap"></span>
         </a>
       </h2>
+
+      <div class="blog">
+        <p><a href="{% url 'blog' %}">GO TO BLOG <i class="fa fa-arrow-right "></i></a></p>
+    </div>
   </div>
 </div>
 
