--- a/likita_proj/base/templates/base/post.html
+++ b/likita_proj/base/templates/base/post.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div id="post-feeds">
+<div id="post-feeds" style="position: relative; top: 100px">
 
     <article class="feeds"> 
         <div class="posts">
