--- a/likita_proj/authy/templates/authy/login-register.html
+++ b/likita_proj/authy/templates/authy/login-register.html
@@ -15,9 +15,9 @@
                 <ul>
                     <li>
                        <label for="">
-                        {{field.label}}:
+                        {{field.label_tag}}
                        </label> 
-                       {{field}}  
+                       {{field}} 
                     </li>
                     <li></li>
                 </ul>
