--- a/likita_proj/base/templates/base/home.html
+++ b/likita_proj/base/templates/base/home.html
@@ -7,8 +7,8 @@
 
 <div class="main-container">
   <div>{% include 'base/hero.html' %}</div>
-  <div>{% include 'base/feeds.html' %}</div>
-  <div>{% include 'base/contact.html' %}</div>
+  <div>{% include 'base/services.html' %}</div>
+  <div  id="contact">{% include 'base/staffs.html' %}</div>
 </div> 
 <script src="{% static 'js/scripts.js' %}"></script>
 {% endblock content %}
