--- a/likita_proj/profiles/templates/profiles/profile.html
+++ b/likita_proj/profiles/templates/profiles/profile.html
@@ -4,81 +4,178 @@
 
 <section class='profile'>
   <article>
-    <div class="profile-container">
-      <div class="left-side col col-3">
-        <div class="credentials">
-          <h1>Personal Credentials</h1>
-          <p><strong> Name: {{user_profile.name}} </strong></p>
-          <p><strong> Age: {{user_profile.date_of_birth | timesince}} </strong></p>
-          <p><strong> Gender: {{user_profile.gender}} </strong></p>
-          <p><strong> Location: {{user_profile.location}} </strong></p>
-          <p><strong> Date of Birth: {{user_profile.date_of_birth}} </strong></p>
+      <div class="profile-container">
+        <div class="left-side col col-3">
+          <div class="credentials">
+            <h1>Personal Credentials</h1>
+            <p><strong> Name: {{user_profile.name}} </strong></p>
+            <p><strong> Age: {{user_profile.date_of_birth | timesince}} </strong></p>
+            <p><strong> Gender: {{user_profile.gender}} </strong></p>
+            <p><strong> Location: {{user_profile.location}} </strong></p>
+            <p><strong> Date of Birth: {{user_profile.date_of_birth}} </strong></p>
+          </div><br><br>
+          <div class="bios">
+            <h1>Bio</h1>
+            {% if not user_profile.bio %}
+            {% else %}
+            <p><strong>{{user_profile.bio}}</strong></p>
+            {% endif %}
+          </div><br><br>
+        
+        <div>
+              <!--Appointment Loop-->
+          <!-- pannel-->
+          {% if not request.user.is_superuser %}
+          {% if appointments.count > 0 %}
+          <div class="mt-5">
+            <h1 class="ms-5">Appointments</h1>
+            <div class="shadow p-4 mb-3 bg-body bg-body rounded text-black m-5">
+              {% for appointment in appointments %}
+              <div class="list-group fs-4 border p-3 mb-3">
+                <p class="list-group mt-2"> <strong> id: {{ appointment.id }}</strong></p>
+                <p class="list-group mt-2"> <strong> Day: {{ appointment.day }}</strong></p>
+                <p class="list-group mt-2"><strong>Time: {{ appointment.time }}</strong> </p>
+                <p class="list-group mt-2"> <strong> Service: {{ appointment.service }}</strong></p>
+                <div class="mt-3 mb-2">
+                  <a
+                    class="btn btn-primary rounded-3 p-2"
+                    href="{% url 'userUpdate' appointment.id %}"
+                    >Edit Appointment</a
+                  >
+                </div>
+              </div>
+              {% endfor %}
+            </div>
+          </div>
+          {% endif %}
+          {% endif %}
+        
         </div>
-        <div class="bios">
-          <h1>Bio</h1>
-          {% if not user_profile.bio %}
+        </div>
+        <div class="right-side col col-9">
+          <div class="image">
+            <img src="{{user_profile.avatar.url}}" alt="" />
+          </div>
+          {% if not user_profile.profession %}
           {% else %}
-          <p><strong>{{user_profile.bio}}</strong></p>
+          <p><small>I am a {{user_profile.profession}}</small></p>
           {% endif %}
-
+            
+          <div class="edit-btn">
+            {% if request.user.username == user_profile.username or request.user.is_superuser %}
+            <a href="{% url 'settings' user_profile.username %}">
+              <button type="button">Edit Profile</button></a
+            >
+            <a href="{% url 'create-post' %}"><button>Create Post</button></a>
+            {% endif %}
+              {% if request.user.is_superuser %}
+            <a href="{% url 'contact' %}"><button>Reply Contacts</button></a>
+            <a href="{% url 'send-newsletter' %}"><button>Send Newsletter</button></a>
+            {% endif %}
+          </div>
+        
+          {% comment %} new {% endcomment %}
+          <div>
+          
+          </div>
+          {% comment %} new end {% endcomment %}
         </div>
-      </div>
-      <div class="right-side col col-9">
-        <div class="image">
-          <img src="{{user_profile.avatar.url}}" alt="" />
-        </div>
-        {% if not user_profile.profession %}
-        {% else %}
-        <p><small>I am a {{user_profile.profession}}</small></p>
-        {% endif %}
-
-
-        <div class="edit-btn">
-          {% if request.user.username == user_profile.username or request.user.is_superuser %}
-          <a href="{% url 'settings' user_profile.username %}">
-            <button type="button">Edit Profile</button></a
-          >
-          <a href="{% url 'create-post' %}"><button>Create Post</button></a>
-          {% endif %}
-            {% if request.user.is_superuser %}
-          <a href="{% url 'contact' %}"><button>Reply Contacts</button></a>
-          {% endif %}
-        </div>
-      </div>
-    </div> 
+      </div> 
   </article>
-
+  
   <article>
-    {% if not user_profile.comment_set.all %}
-    <h1 style="text-align: center;">No Conversations</h1>
-    {% else %}
-    <h1 style="text-align: center;">Your Conversations</h1>
-    {% for comments in user_profile.comment_set.all %}
-
-    <div class="profile-conversation">
-
-      <div class="conversation-comment">
-        <h4>Comments: </h2>
-          <a href="{% url 'post' comments.post.id %}">
-            <h3>Post: {{comments.post.topic.title}}</h3>
-          </a>
-        <p><strong><a href="{% url 'profile' comments.sender.username %}">@{{comments.sender.username}}</a></strong> : {{comments.body}}</p>
-     </div>
-
-     
-      <div class="conversation-replies">
-        {% for replies in comments.commentreply_set.all %}
-        <h4>Replied: {{replies.created_at | timesince}} ago</h4>
-        <p><strong>@{{replies.replier.username}}</strong> : {{replies.body}}</p>
-        {% endfor %}
-      </div>
-
+      
+    {% if request.user.is_authenticated %}
+  
+    <div class="shadow p-4 mb-5 bg-body bg-body rounded text-black  m-5 ">
+        <h1 class="text-center mt-5 mb-5">Staff Panel</h1>
+        <input class="form-control" id="myInput" type="search" placeholder="Search Appointment">
+        <br>
+    
+        <div class="table-responsive">
+          <table class="table table-bordered table-striped table-hover mx-auto">
+              <thead>
+                <tr>
+                  <th class="text-center" scope="col">Time</th>
+                  <th class="text-center" scope="col">First Name</th>
+                  <th class="text-center" scope="col">Last Name</th>
+                  <th class="text-center" scope="col">Service</th>
+                  <th class="text-center" scope="col">Date</th>
+                </tr>
+              </thead>
+              <tbody id="myTable">
+                  {% for item in items %}
+                <tr>
+                  <td class="text-center">{{item.time}}</td>
+                  <td class="text-center">{{item.user.first_name}}</td>
+                  <td class="text-center">{{item.user.last_name}}</td>
+                  <td class="text-center">{{item.service}}</td>
+                  <td class="text-center">{{item.day}}</td>
+                </tr>
+                  {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        
     </div>
-    {% endfor %}
-
+  
+    {% else %}
+  
+    <div class="shadow p-4 mb-5 bg-body bg-body rounded text-black  m-5">
+      <h1 class="p-2  me-3">First Sign in!</h1>
+      <a href="{% url 'login' %}" class="btn btn-primary text-white">Sign in</a>
+    </div>
+  
     {% endif %}
-
+  </article>
+  
+  <article>
+      {% if not user_profile.comment_set.all %}
+      <h1 style="text-align: center;">No Conversations</h1>
+      {% else %}
+      <h1 style="text-align: center;">Your Conversations</h1>
+      {% for comments in user_profile.comment_set.all %}
+  
+      <div class="profile-conversation">
+      
+        <div class="conversation-comment">
+          <h4>Comments: </h2>
+            <a href="{% url 'post' comments.post.id %}">
+              <h3>Post: {{comments.post.topic.title}}</h3>
+            </a>
+          <p><strong><a href="{% url 'profile' comments.sender.username %}">@{{comments.sender.username}}</a></strong> : {{comments.body}}</p>
+       </div>
+      
+       
+        <div class="conversation-replies">
+          {% for replies in comments.commentreply_set.all %}
+          <h4>Replied: {{replies.created_at | timesince}} ago</h4>
+          <p><strong>@{{replies.replier.username}}</strong> : {{replies.body}}</p>
+          {% endfor %}
+        </div>
+      
+      </div>
+      {% endfor %}
+    
+      {% endif %}
+    
   </article>
 </section>
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<script>
+    $(document).ready(function(){
+      $("#myInput").on("keyup", function() {
+        var value = $(this).val().toLowerCase();
+        $("#myTable tr").filter(function() {
+          $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+        });
+      });
+    });
+</script>
+
 
  {% endblock content %}
