--- a/likita_proj/templates/navbar.html
+++ b/likita_proj/templates/navbar.html
@@ -5,22 +5,24 @@
         <ul class="menu">
             <ul class="menu-item">
                 <li class="nav-items"><a href="{% url 'home' %}" class="nav-link">Home</a></li>
-                <li class="nav-items"><a href="" class="nav-link">About</a></li>
+                <li class="nav-items"><a href="{% url 'about-me' %}" class="nav-link">About</a></li>
                 <li class="nav-items"><a href="{% url 'gallery' %}" class="nav-link">Gallery</a></li>
-                <li class="nav-items btn btn-header"><a href="" class="nav-link">Book an appointment</a></li>
+                <li class="nav-items "><a href="{% url 'booking' %}" class="nav-link btn" style="display: flex; gap: 10px"><i class="fa fa-book"></i>Book Appointment</a></li>
+                <li class="nav-items"><a href="{% url 'contact-us' %}" class="nav-link btn" style="display: flex; gap: 10px"><i class="fa fa-address-book"></i> Contact Us </a></li>
+
             </ul>
             <ul class="menu-item">
                 {% if request.user.is_authenticated %}
                 <li><a href="{% url 'profile' request.user.username %}"><img src="{{request.user.avatar.url}}" alt="" width="30" height="30"></a> </li>
-                <li><a href="{% url 'profile' request.user.username %}"> {{request.user.name}}</a> </li>
+                {% comment %} <li><a href="{% url 'profile' request.user.username %}"> {{request.user.name | truncatechars:4}}</a> </li> {% endcomment %}
                 <ul class="hide-wrapper">
-                <li class="nav-items hide"><a href="{% url 'logout' %}" class="nav-link">Logout</a></li>
-                <li class="nav-items hide"><a href="{% url 'settings' request.user.username %}" class="nav-link">Settings</a></li>
+                <li class="nav-items hide"><a href="{% url 'logout' %}" class="nav-link" style="display: flex; gap: 10px"> <i class="fa fa-sign-out"></i>Logout</a></li>
+                <li class="nav-items hide"><a href="{% url 'settings' request.user.username %}" style="display: flex; gap: 10px" class="nav-link"> <i class="fa fa-cog"></i>Settings</a></li>
                 </ul>
                 <li class="nav-items"><li class="nav-link"><i class="fa fa-caret-down"></i></li></li>
 
                 {% else %}
-                <li class="nav-items"><a href="{% url 'login' %}" class="nav-link">Sign Up/Login</a></li>
+                <li class="nav-items"><a href="{% url 'login' %}" style="display: flex; gap: 10px" class="nav-link"> <i class="fa fa-key"></i> Sign Up/Login</a></li>
                 {% endif %}              
             </ul>
         </ul>
@@ -39,6 +41,7 @@
             </div>
             <h1>Likita.com</h1>
         </div>
+       
         <div class="mode" id="mode">
             <i class="fa-solid fa-moon" aria-hidden="true"></i>
             <i class="fa-solid fa-sun" aria-hidden="true"></i>
@@ -54,3 +57,4 @@
     </div>
 </header>
 
+<script src="{% static 'js/scrollTo.js' %}"></script>
